feat: 集成知识库框架和AI服务支持
- 添加httpx依赖用于AI API调用
- 配置AI服务参数(OpenAI兼容API)
- 实现知识库数据模型和服务层
- 集成知识库检索到AI对话流程
- 更新前端助手欢迎语为考研专用
- 添加知识库管理API接口
- 提供知识库批量导入脚本

--- a/ai-study-planner/backend/.env.example
+++ b/ai-study-planner/backend/.env.example
@@ -14,6 +14,9 @@ SECRET_KEY=your-secret-key-here-change-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# AI模型配置（预留）
-AI_MODEL_API_KEY=your-ai-api-key
-AI_MODEL_ENDPOINT=https://api.example.com/v1
+# AI模型配置 (OpenAI兼容API)
+AI_API_KEY=sk-9ea481f296cb4c8584709b3415717acc
+AI_ENDPOINT=https://dashscope.aliyuncs.com/compatible-mode/v1
+AI_MODEL_NAME=qwen3-max
+AI_MAX_TOKENS=2000
+AI_TEMPERATURE=0.7
