chore: 更新百炼大模型配置示例
将环境变量示例文件中的百炼配置更新为更通用的兼容模式端点，并调整模型为 qwen3-max，以适配最新的API规范。

--- a/emotion-analysis-backend/.env.example
+++ b/emotion-analysis-backend/.env.example
@@ -11,9 +11,9 @@ MYSQL_DATABASE=emotion_analysis
 
 # 百炼大模型配置
 # 请在阿里云百炼平台获取API Key: https://dashscope.aliyun.com/
-BAILILIAN_API_KEY=your_api_key_here
-BAILILIAN_API_URL=https://dashscope.aliyuncs.com/api/v1/services/aigc/text-generation/generation
-BAILILIAN_MODEL=qwen-max
+BAILILIAN_API_KEY=sk-9ea481f296cb4c8584709b3415717acc
+BAILILIAN_API_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+BAILILIAN_MODEL=qwen3-max
 
 # JWT配置（用于用户认证）
 SECRET_KEY=your-secret-key-change-this-in-production
