chore: 更新百炼大模型配置为生产环境密钥
将测试用的API Key替换为真实的生产环境密钥，并更新API端点以兼容qwen3-max模型。

--- a/emotion-analysis-backend/.env
+++ b/emotion-analysis-backend/.env
@@ -10,9 +10,9 @@ MYSQL_PASSWORD=your_password
 MYSQL_DATABASE=emotion_analysis
 
 # 百炼大模型配置 (需要替换为真实的API Key)
-BAILILIAN_API_KEY=your_bailian_api_key_here
-BAILILIAN_API_URL=https://dashscope.aliyuncs.com/api/v1/services/aigc/text-generation/generation
-BAILILIAN_MODEL=qwen-plus
+BAILILIAN_API_KEY=sk-9ea481f296cb4c8584709b3415717acc
+BAILILIAN_API_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+BAILILIAN_MODEL=qwen3-max
 
 # JWT配置
 SECRET_KEY=your-secret-key-change-this-in-production
