feat: 集成AI情绪分析服务并优化数据库配置
- 添加OpenAI SDK依赖，重构AI服务使用兼容模式调用百炼大模型
- 统一情绪类型枚举值为大写，更新数据库表结构
- 修复数据库连接字符集配置，添加UTF-8支持
- 创建数据库初始化脚本和API测试脚本
- 在前端页面集成AI分析功能，添加错误处理和加载状态
- 增加详细日志输出便于调试和监控服务状态

--- a/emotion-analysis-backend/.env
+++ b/emotion-analysis-backend/.env
@@ -6,13 +6,13 @@ DEBUG=true
 MYSQL_HOST=localhost
 MYSQL_PORT=3306
 MYSQL_USER=root
-MYSQL_PASSWORD=your_password
+MYSQL_PASSWORD=0755
 MYSQL_DATABASE=emotion_analysis
 
 # 百炼大模型配置 (需要替换为真实的API Key)
 BAILILIAN_API_KEY=sk-9ea481f296cb4c8584709b3415717acc
 BAILILIAN_API_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
-BAILILIAN_MODEL=qwen3-max
+BAILILIAN_MODEL=qwen-plus-2025-09-11
 
 # JWT配置
 SECRET_KEY=your-secret-key-change-this-in-production
